# crypto-terminal-dashboard

./: .env.example  .gitignore  CLAUDE.md  CODEX.md  Cargo.toml  Dashboard-plan.md  Overview.md  README.md  config.json
.claude/: settings.local.json
planning/tasks/: phase-1-opengl-main.md  phase-2-overview-view.md  phase-3-details-view.md  phase-4-chart-integration.md  phase-5-input-handling.md  phase-6-cleanup.md
src/: app.rs  config.rs  events.rs  main.rs  mock.rs  news_cache.rs  theme.rs
src/api/: binance.rs  coinbase.rs  margin.rs  mod.rs  news.rs
src/base/: drm_display.rs  focus.rs  font_atlas.rs  input.rs  main.rs  main.rs.backup  mod.rs  scrollable.rs  text_renderer.rs  view.rs
src/base/layout/: mod.rs  panel.rs  style.rs  tree.rs
src/base/renderer/: layout_renderer.rs  mod.rs  rect_renderer.rs  scissor_stack.rs
src/notifications/: audio.rs  manager.rs  mod.rs  notification.rs  persistence.rs  rules.rs  ticker_tones.rs
src/ui/: details.rs  mod.rs  overview.rs  widgets.rs
src/views/: details.rs  mod.rs  news.rs  notifications.rs  overview.rs  positions.rs
src/widgets/: candlestick_chart.rs  chart_renderer.rs  chart_utils.rs  coin_table.rs  control_footer.rs  format.rs  indicator_panel.rs  indicators.rs  mod.rs  polygonal_chart.rs  positions_table.rs  price_panel.rs  status_header.rs  table.rs  text_box.rs  theme.rs  titled_panel.rs
themes/: binance.json  dracula.json  gruvbox-dark.json  nord.json
