[package]
name = "crypto-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# WebSocket and HTTP
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1"

# OpenGL utilities
bytemuck = { version = "1.14", features = ["derive"] }
glow = "0.13"
khronos-egl = { version = "6.0", features = ["dynamic"] }
gbm = { version = "0.15", default-features = false, features = ["drm-support"] }
drm = "0.12"
drm-sys = "0.7"
libc = "0.2"
fontdue = "0.9"
taffy = "0.5"
rand = "0.8"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
